--- a/index.html
+++ b/index.html
@@ -20,6 +20,34 @@
         <a href="About.HTML">About</a>
         <a href="Contact.HTML">Contact</a>
     </nav>
+<hr/>
+<h2>A - Tagg</h2>
+<a href="https://www.w3schools.com">Länk till W3schools</a>
+<br/> <br/>
+<hr/>
+<h2>Img - Tagg</h2>
+<img src="IMAGES/IMAGES.jpg" alt="Sunset">
+<br/>
+<hr />
+<Section>
+    <h2>div - Tag, Strong - Tag u - Tag</h2>
+    <div>
+        "<Strong>Sed ut perspiciatis unde omnis</Strong> 
+        error sit voluptatem accusantium 
+        doloremque laudantium, totam rem 
+        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+         beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
+         voluptas <u> sit aspernatur aut odit</u>
+         aut fugit, sed quia consequuntur 
+         magni dolores eos qui ratione 
+         voluptatem sequi nesciunt. Neque 
+         porro quisquam est, qui dolorem 
+         ipsum quia dolor sit amet,
+         consectetur, adipisci velit,
+         sed quia non numquam eius modi tempora
+         incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+    </div>
+</Section>
 
 </body>
 </html>
